@@ -151,7 +151,7 @@
                 <property name="margin_top">4</property>
                 <property name="margin_bottom">4</property>
                 <property name="model">prioritystore</property>
-                <property name="active">0</property>
+                <property name="active">2</property>
                 <child>
                   <object class="GtkCellRendererText" id="cellrenderertext1"/>
                   <attributes>
