@@ -14,6 +14,7 @@ v0.0.4
  * added window position and size restore.
  * added tasks sort column/order restore.
  * fixed error message displayed when a note does not exist.
+ * new task dialog allow to set description and priority.
 
 v0.0.3
 ------
